fix: spacing img from top

--- a/css/styles.css
+++ b/css/styles.css
@@ -190,7 +190,7 @@ section {
 
 @media (min-height: 770px) {
   .section-mid {
-    margin-top: -200px;
+    margin-top: -150px;
   }
 
   #about h2 {
